@@ -1,6 +1,6 @@
 /* -*- mode:C; tab-width:8; c-default-style:linux; c-basic-offset:8; indent-tabs-mode:nil -*- */
 /*
- * cursor.c
+ * key_cursor.c
  * gscore - a musical score editor
  *
  * (C) Copyright 2001-2005 Sebastien Tricaud
